File uploader, webworker starter * Add file uploader element and logic, * Add start of webworker on file upload event

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,6 +2,8 @@
 <head></head>
 <body>
 Hello World
+<input type="file" id="fileUploder">
+
 <script src="/assets/app.bundle.js"></script>
 </body>
 </html>
