--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,9 +1,19 @@
 <html>
 <head></head>
 <body>
-Hello World
-<input type="file" id="fileUploder">
-
+    <div id="loader-wrapper">
+        <div id="loader"></div>
+    </div>
+    <div class="flex-container">
+        <div class="flex-item">
+            <a href='#' id="resultLink">
+            <label class="button" role="button" data-hover="Download">
+                Upload
+                <input type="file" name="file" id="fileUploder">
+            </label>
+            </a>
+        </div>
+    </div>
 <script src="/assets/app.bundle.js"></script>
 </body>
 </html>
