Make UI simplier * add button and enter key listener on frame enter stage * add download and return buttons on final step

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,15 +1,13 @@
 <html>
 <head></head>
-<body>
+<body bgcolor="freedom">
     <div id="loader-wrapper">
         <div id="loader"></div>
     </div>
     <div class="flex-container">
         <div class="flex-item">
-            <a href='#' id="resultLink">
             <label class="button" role="button" data-hover="Download">
             </label>
-            </a>
         </div>
     </div>
 <script src="/assets/app.bundle.js"></script>
